Renamed revue 2023 photo

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ button, a {
     background-image: url(images/shows/revue_2016_wild_wild_party.jpeg);
 }
 #feature {
-    background-image: url("images/shows/revue_2023_where_i_want_to_be.jpg");
+    background-image: url("images/shows/revue_2023_where_i_want_to_be.jpeg");
     background-position: center;
     background-repeat: repeat;
     background-size: contain;
