--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ button, a {
     line-height: var(--navbar_height);
 }
 /* Wide nav bar */
-@media (min-width: 850px) {
+@media (min-width: 900px) {
     #nav_links {
         z-index: 1;
         flex-direction: row;
@@ -220,7 +220,7 @@ button, a {
     }
 }
 /* Compact nav bar */
-@media (max-width: 850px) {
+@media (max-width: 900px) {
     #nav_links {
         z-index: 0;
         width: 100%;
@@ -285,7 +285,6 @@ button, a {
 #down_button {
     position: absolute;
     bottom: 0px;
-    transition: opacity var(--animation_duration);
 }
 /* Hide down button when users can already see the rest of the page */
 @media (max-aspect-ratio: 16/10) {
@@ -311,7 +310,7 @@ button, a {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    padding: 0px 30px;
+    padding: 0px 20px;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -329,7 +328,7 @@ button, a {
     object-fit: cover;
 }
 .show_title {
-    margin: 15px 0;
+    margin: 15px 10px;
 }
 
 /* COMMITTEE */
