--- a/style.css
+++ b/style.css
@@ -4,26 +4,24 @@
 }
 html {
     /* CONSTANTS */
-    --accent: #1B49a9;
+    --accent: #1B49A9;
     --secondary: #8A8A8E;
     --navbar_height: 60px;
     --content_width: 800px;
     --wide_content_width: 1200px;
     --animation_duration: 0.35s;
     
-    font-family: system-ui;
-    scroll-behavior: smooth; /* For scroll anchor links */
+    scroll-behavior: smooth;
     text-align: center;
-    background-color: var(--accent);
 
     /* Stops weird font size resizing on mobile */
     text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
-body {
-    background-color: var(--accent);
+body, html {
+    background-color: var(--accent); /* Safari browser background */
 }
 p, h1, h2, h3, h4, a, button, body {
     margin: 0px;
@@ -58,7 +56,6 @@ h1, h2, h3, h4, a, button, .light {
 .symbol {
     width: 30px;
     height: 30px;
-    display: block;
 }
 
 /* BUTTONS */
@@ -72,7 +69,7 @@ button, a {
 }
 @media (hover: hover) {
     button:hover, a:hover {
-        opacity: 0.8; /* Slightly see-through on click */
+        opacity: 0.8; /* Slightly see-through on hover */
     }
 }
 .large_button {
@@ -177,6 +174,12 @@ button, a {
     width: 100%;
     gap: 20px;
 }
+#imperial_logo {
+    height: 40px;
+}
+#union_logo {
+    height: 50px;
+}
 
 /* NAVIGATION */
 #nav {
@@ -278,12 +281,6 @@ button, a {
     width: min(50vh, 50vw);
     height: min(50vh, 50vw);
 }
-#imperial_logo {
-    height: 40px;
-}
-#union_logo {
-    height: 50px;
-}
 #down_button {
     position: absolute;
     bottom: 0px;
@@ -312,7 +309,7 @@ button, a {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    padding: 0px 20px;
+    padding: 20px;
     justify-content: space-evenly;
     align-items: center;
 }
