--- a/static/style.css
+++ b/static/style.css
@@ -290,6 +290,21 @@ button, a {
     height: calc(20px + 3vh);
 }
 
+/* FEATURE */
+#feature {
+    background-image: url("images/posters/spring_awakening.jpeg");
+    background-position: center;
+    background-repeat: repeat;
+    background-size: contain;
+    height: calc(min(500px, 100vw));
+    padding: 0px;
+    align-items: end;
+}
+#feature_button {
+    position: relative;
+    bottom: -20px;
+}
+
 /* SHOWS */
 #past_shows {
     display: flex;
