add spring awakening to recent shows and feature big fish tickets

--- a/static/style.css
+++ b/static/style.css
@@ -292,7 +292,7 @@ button, a {
 
 /* FEATURE */
 #feature {
-    background-image: url("images/posters/spring_awakening.jpeg");
+    background-image: url("images/posters/big_fish.jpeg");
     background-position: center;
     background-repeat: repeat;
     background-size: contain;
